<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#191926"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/orig"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/orig"
            android:scaleType="centerCrop"
            android:src="@drawable/background_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"

            android:text="Avengers:\nEnd Game"
            android:textColor="@color/name_color"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/age" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="222dp"
            android:text="@string/age_text"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orig" />

        <TextView
            android:id="@+id/types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/type_text"
            android:textColor="@color/type_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_marginTop="32dp"
            android:clickable="false"
            android:numStars="5"
            android:rating="4"
            android:theme="@style/RatingBar1"
            app:layout_constraintStart_toStartOf="@+id/types"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:lineHeight="20sp"
            android:text="@string/reviews_text"
            android:textColor="@color/reviews_color"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"

            android:text="@string/storyline_text"
            android:textColor="@color/name_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="98dp"
            android:layout_marginEnd="16dp"

            android:text="@string/text_description"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"

            android:text="@string/cast_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:scaleType="centerCrop"
            android:src="@drawable/robert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast"
            app:shapeAppearanceOverlay="@style/circleImageView"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="31dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chris"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast"
            app:shapeAppearanceOverlay="@style/circleImageView"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="192dp"
            android:layout_marginTop="31dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="31dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chris2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast"
            app:shapeAppearanceOverlay="@style/circleImageView"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="117dp"
            android:text="@string/robertname"
            android:textColor="@color/actor_color"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="117dp"
            android:text="@string/evans_name"
            android:textColor="@color/actor_color"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_marginStart="192dp"
            android:layout_marginTop="117dp"
            android:text="@string/ruffalo_name"
            android:textColor="@color/actor_color"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="117dp"
            android:text="@string/hemsworth_name"
            android:textColor="@color/actor_color"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cast" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>